<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/profile">

        <menu>
            <group android:checkableBehavior="single">

                <item android:id="@+id/video_fragment_id"
                    android:title="show video" />
                <item android:id="@+id/sensor_fragment_id"
                    android:title="show sensor fragment" />
                <item android:id="@+id/gyroscope_fragment_id"
                    android:title="show gyroscope data"/>

                <item android:id="@+id/audio_record_fragment_id"
                    android:title="record voice" />

                <item android:id="@+id/add_event_fragment_id"
                    android:title="add event" />

                <item android:id="@+id/delete_event_fragment_id"
                    android:title="delete event" />

                <item android:id="@+id/calendar_fragment_id"
                    android:title="calendar"/>

                <item android:id="@+id/telephony_manager_id"
                    android:title="telephony manager"
                    />

                <item
                    android:id="@+id/search_contacts_id"
                    android:title="search contacts" />

                <item
                    android:id="@+id/edit_contact_fragment_id"
                    android:title="edit contact"
                    />
                <item
                    android:id="@+id/add_contact_fragment_id"
                    android:title="add contact" />
                <item
                    android:id="@+id/id_for_contacts_fragment"
                    android:title="get contacts"/>


                <item
                    android:id="@+id/id_get_all_courses_db_room"
                    android:title="get all courses"/>
                <item
                    android:id="@+id/id_add_course_db_room"
                    android:title="add course" />
                <item
                    android:id="@+id/id_for_course_fragment"
                    android:title="for course fragment" />

                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/profile"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/login_icon"
                    android:title="@string/login" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout_icon"
                    android:title="@string/logout" />

                <item
                    android:id="@+id/id_db_room"
                    android:icon="@drawable/logout_icon"
                    android:title="room" />
                <item
                    android:id="@+id/id_add_student_db_room"
                    android:title="add student" />
                <item
                    android:id="@+id/id_update_student_db_room"
                    android:title="update student" />
                <item
                    android:id="@+id/id_get_all_students_db_room"
                    android:title="get all students" />


            </group>

        </menu>

    </item>

    <item android:title="@string/home">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/home_id"
                    android:icon="@drawable/home"
                    android:title="@string/home" />

                <item
                    android:id="@+id/search_id"
                    android:checked="false"
                    android:icon="@drawable/baseline_search_24"
                    android:title="@string/search" />

                <item
                    android:id="@+id/destination_id"
                    android:checked="false"
                    android:title="Destination" />

                <item
                    android:id="@+id/register_id"
                    android:checked="false"
                    android:title="Registration" />



                <item
                    android:id="@+id/settings_id"
                    android:checked="false"
                    android:icon="@drawable/settings_icon"
                    android:title="@string/setting" />

            </group>

        </menu>

    </item>



</menu>